--- a/dualHtml/css/style.css
+++ b/dualHtml/css/style.css
@@ -42,6 +42,7 @@ body {
 	height: 100%;
 	margin: 0 auto;
 	text-align: center;
+	/* border: 2px green solid; */
 }
 
 .sb-certificate-table {
@@ -136,7 +137,7 @@ body {
 	/* border: 2px green solid; */
 }
 .sb-certificate-footer {
-	margin-top: 100px;
+	margin-top: 10px;
 	text-align: center;
 }
 /* .sb-certificate-footer div {
@@ -184,8 +185,8 @@ body {
 	justify-content: space-between;
 
 	margin: auto;
-	margin-bottom: 40px;
-	margin-top: 40px;
+	margin-bottom: 10px;
+	margin-top: 10px;
 }
 hr.sign-line {
 	border: 0px;
@@ -202,14 +203,15 @@ hr.sign-line {
 }
 
 .dualLogo {
-	width: 70vw;
+	width: 60vw;
 	/* height: 40%; */
-	margin-top: 30px;
+	/* margin-top: 10px; */
 }
 .allign-content {
-	margin-top: 60px;
+	margin-top: 15px;
+	line-height: 30px;
 }
 .qrImage {
 	width: 70px;
-	margin-top: 100px;
+	margin-top: 25px;
 }
